# cpp-projects

./: APP-"Trade"
app<"trade">/: BankBrain.cpp  BankBrain.h  CMakeLists.txt  mainwindow.cpp  mainwindow.h
bank system1/: README.md  c++bk-sys-.c++
password.system/: README.md  cqq.c++
system-motor/: mainmotor.cpp
